<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.blessedloginproofofconcept.activities.LoginActivity2">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:context="com.example.android.blessedloginproofofconcept.activities.LoginActivity"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dots_height"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/enterEmailText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_corner_single_line_textview"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="3dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="3dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#dddddd"
                android:textSize="16sp" />



            <EditText
                android:id="@+id/enterPasswordText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/rounded_corner_single_line_textview"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginTop="16dp"
                android:paddingBottom="3dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="3dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#dddddd"
                android:textSize="16sp"/>


            <Button
                android:id="@+id/emailSignInButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_corner_button"
                android:text="@string/action_sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />



            <LinearLayout
                android:id="@+id/facebookSignInButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner_facebook_button"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    app:srcCompat="@drawable/facebook_icon" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="Sign In with Facebook"
                    android:layout_marginRight="16dp"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
